# UAV-UGV-nav

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.cfg  testing.py
config/: gazebo_params.yaml  joystick.yaml  my_controller.yaml  view_bot.rviz
description/: camera.xacro  camera_uav copy.xacro  camera_uav.xacro  depth_camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro  uav.sdf  uav.urdf.xacro  uav.xacro
includes/: processImage.cpp  processImage.h
launch/: joystick.launch.py  launch_sim.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  rsp.launch.py  rsp_uav.launch.py  spawn_uav.launch.py
models/mobile_warehouse_robot/: model.config  model.sdf
scripts/: waypoints_publisher.py  waypoints_subscriber.py
src/: follow_waypoints.py  image_processor.cpp  nav2_handler.cpp  waypoints_client.cpp  waypoints_server.cpp
worlds/: room.world  roomWithObstacles.world  roomWithObstacles2.world
